# mindly

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
docs/: ml_system_design_doc.md
scripts/: demo_isolation.py  run_eval.py
src/mindly/: __init__.py  agent.py  cli.py  memory.py  personas.py
src/mindly/eval/: benchmark.py
tests/: test_isolation.py  test_memory.py
