[project]
name = "mindly"
version = "0.1.0"
description = "AI wellness coaching agent with persistent memory"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.30.0",
    "chromadb>=0.5.15",
    "sentence-transformers>=3.0.0",
    "rich>=13.7.0",
    "loguru>=0.7.2",
    "python-dotenv>=1.0.0",
    "wandb>=0.16.0",
    "datasets>=2.20.0",
    "typer>=0.12.3",
    "httpx>=0.27.0",
    "pytest>=8.0.0",
]

[project.scripts]
mindly = "mindly.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mindly"]

[tool.pytest.ini_options]
testpaths = ["tests"]
